# travelling-salesman-problem

./: .gitignore  .gitmodules  CMakeLists.txt  CPPLINT.cfg  README.md  random.txt  tsp.cpp
.github/workflows/: cmake.yml  codacy.yml  codeql.yml
backend/: CMakeLists.txt
backend/resources/: berlin52.txt  test.txt
backend/src/: main.cpp
backend/src/classes/Coordinate/: Coordinate.cpp
backend/src/classes/CoordinateWithVisitedState/: CoordinateWithVisitedState.h
backend/src/classes/GraphAdjacencyLists/AdjacencyList/: AdjacencyList.cpp
backend/src/classes/GreedySolver/: GreedySolver.cpp  GreedySolver.h
backend/src/classes/Instance/: Instance.cpp
backend/src/classes/InstanceFileReader/: InstanceFileReader.h
backend/src/classes/RandomInstanceGenerator/: RandomInstanceGenerator.cpp  RandomInstanceGenerator.h
backend/src/classes/RandomNumberGenerator/: RandomNumberGenerator.h
backend/src/classes/WebsocketServer/: WebsocketServer.cpp
backend/tests/: BenchmarkTests.cpp
backend/tests/classes/Coordinate/: CoordinateTest.cpp
backend/tests/classes/GraphAdjacencyLists/: GraphAdjacencyListsTests.cpp
backend/tests/classes/GreedySolver/: GreedySolverTests.cpp
backend/tests/classes/InstanceFileReader/: InstanceFileReaderTests.cpp
backend/tests/classes/RandomInstanceGenerator/: RandomInstanceGeneratorTests.cpp
backend/tests/classes/SimulatedAnnealingSolver/: SimulatedAnnealingSolverTests.cpp
frontend/: angular.json  package-lock.json  package.json
frontend/src/: index.html  styles.css
frontend/src/app/: app.component.html  app.component.spec.ts  app.component.ts  app.module.ts
frontend/src/app/components/graph/: graph.component.css  graph.component.ts
frontend/src/app/components/navbar/: navbar.component.css  navbar.component.html  navbar.component.ts
frontend/src/app/graph/: graph.component.ts
frontend/src/app/services/: get-tsp-paths.service.ts  tsp-instance.service.ts  websocket.service.ts
frontend/src/environments/: environment.development.ts  environment.ts
resources/: a280.txt  ch150.txt  gr202.txt  gr666.txt  kroA100.txt  lin105.txt  st70.txt  tsp1000.txt  tsp225.txt  tsp250.txt  tsp500.txt  u159.txt
src/: main.cpp  tsp.cpp
src/classes/Coordinate/: Coordinate.cpp  Coordinate.h
src/classes/CoordinateSystem/: CoordinateSystem.cpp  CoordinateSystem.h
src/classes/CoordinateWithVisitedState/: CoordinateWithVisitedState.cpp  CoordinateWithVisitedState.h
src/classes/GraphAdjacencyLists/: GraphAdjacencyLists.cpp  GraphAdjacencyLists.h
src/classes/GraphAdjacencyLists/AdjacencyList/: AdjacencyList.cpp  AdjacencyList.h
src/classes/GraphAdjacencyMatrix/: GraphAdjacencyMatrix.cpp  GraphAdjacencyMatrix.h
src/classes/GreedySolver/: GreedySolver.cpp  GreedySolver.h
src/classes/Instance/: Instance.cpp  Instance.h
src/classes/InstanceFileReader/: InstanceFileReader.cpp  InstanceFileReader.h
src/classes/InstanceGenerator/: InstanceGenerator.cpp  InstanceGenerator.h
src/classes/InstanceReaderFile/: InstanceReaderFile.cpp  InstanceReaderFile.h
src/classes/RandomInstanceGenerator/: RandomInstanceGenerator.cpp  RandomInstanceGenerator.h
src/classes/RandomNumberGenerator/: RandomNumberGenerator.cpp  RandomNumberGenerator.h
src/classes/SimulatedAnnealingSolver/: SimulatedAnnealingSolver.cpp  SimulatedAnnealingSolver.h
src/classes/WebsocketServer/: WebsocketServer.cpp  WebsocketServer.h
tests/: BenchmarkTests.cpp  GreedyVsSaTests.cpp  OpVsSa.cpp
tests/classes/: CoordinateTest.cpp
tests/classes/Coordinate/: CoordinateTest.cpp
tests/classes/CoordinateWithVisitedState/: CoordinateWithVisitedState.cpp
tests/classes/GraphAdjacencyLists/: GraphAdjacencyListsTests.cpp
tests/classes/GraphAdjacencyLists/AdjacencyList/: AdjacencyListTests.cpp
tests/classes/GreedySolver/: GreedySolverTests.cpp
tests/classes/Instance/: InstanceTests.cpp
tests/classes/InstanceFileReader/: InstanceFileReaderTests.cpp
tests/classes/RandomInstanceGenerator/: RandomInstanceGenerator.cpp  RandomInstanceGeneratorTests.cpp
tests/classes/RandomNumberGenerator/: RandomNumberGeneratorTests.cpp
tests/classes/SimulatedAnnealingSolver/: SimulatedAnnealingSolverTests.cpp
